--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Property Listing</title>
-    <link
-      rel="stylesheet"
-      property="stylesheet"
-      href="https://app.propertyware.com/pw/website/widgets/listing.min.css"
-    />
+    <link rel="stylesheet" property="stylesheet" href="listing.min.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
