fix widget layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://app.propertyware.com/pw/website/widgets/listing.min.css"
     /> -->
     <link rel="stylesheet" property="stylesheet" href="listing.min.css" />
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Property Listings</h1>
